[FIX]Usability fix of the icon, font size and content width for module since_last_visit_new in jquery mode, for theme styles with a little bit less width by default in side modules (including coalesce), while keeping similar readability like other modules.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/12.x@49588 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/design.css
+++ b/styles/layout/design.css
@@ -4156,7 +4156,12 @@ li.ui-tabs-active a {
 }
 
 #mytabs .ui-tabs-nav {
-	zoom: 0.75;
+	zoom: 0.70;
+}
+
+#mytabs .ui-widget-content {
+	margin-left: -10px; 
+	zoom: 0.85;
 }
 
 #mytabs {
